--- a/docs/_posts/2018-09-19-test.md
+++ b/docs/_posts/2018-09-19-test.md
@@ -15,7 +15,7 @@ Here's some biographical info for anyone who cares:
 | Birthplace | Hahira, GA |
 | Birthdate | 1 Dec. 1997 |
 | Allergies | Penecillin |
-| Fears | The depths of of the ocean |
+| Fears | The depths of the ocean |
 
 # Something else?
 
