fixed linkedIn link

--- a/docs/_posts/2018-09-19-test.md
+++ b/docs/_posts/2018-09-19-test.md
@@ -20,4 +20,4 @@ Here's some biographical info for anyone who cares:
 # Something else?
 
 Here's my [Github](https://github.com/EvanBG42).
-and my [LinkedIn](linkedin.com/in/evan-gambill-239657169/).
+and my [LinkedIn](https://linkedin.com/in/evan-gambill-239657169/).
