--- a/docs/_posts/2018-09-19-test.md
+++ b/docs/_posts/2018-09-19-test.md
@@ -8,6 +8,8 @@ author: Evan Gambill
 ---
 
 # Introduction 
+![Headshot]({{site.baseurl}}/assets/images/Headshot.png "Me, at a wedding.")
+
 Here's some biographical info for anyone who cares:
 
 | Category | Data |
