--- a/docs/_posts/2018-09-19-test.md
+++ b/docs/_posts/2018-09-19-test.md
@@ -1,25 +1,19 @@
 ---
 layout: post
-title:  "The Test Page"
+title:  "Creating a new page in Jekyll"
 date:   2018-09-19 
-categories: introduction test
-tags: hi mom
+categories: tutorial guide 
+tags: jekyll github
 author: Evan Gambill
 ---
 
 # Introduction 
-![Headshot]({{site.baseurl}}/assets/images/headshot.PNG "Me, at a wedding.")
+This is a guide for creating new pages using Github Pages (and the underlying Jekyll).
 
-Here's some biographical info for anyone who cares:
+# Writing the page
+1. Write the page in markdown, and with the appropriate heading for Jekyll (the easiest way to do this is to copy the default page heading).
+1. Place the markdown file in the `/pages/` folder.
 
-| Category | Data |
-| --- | ---:|
-| Birthplace | Hahira, GA |
-| Birthdate | 1 Dec. 1997 |
-| Allergies | Penecillin |
-| Fears | The depths of the ocean |
+# Linking to the page
+1. Add a link to that page where you want it, using the `\[Link text\]\(/pages/your-page.html\)` command on the page you want.
 
-# Something else?
-
-Here's my [Github](https://github.com/EvanBG42).
-and my [LinkedIn](https://linkedin.com/in/evan-gambill-239657169/).
