--- a/docs/_posts/2018-09-19-test.md
+++ b/docs/_posts/2018-09-19-test.md
@@ -15,5 +15,5 @@ This is a guide for creating new pages using Github Pages (and the underlying Je
 1. Place the markdown file in the `/pages/` folder.
 
 # Linking to the page
-1. Add a link to that page where you want it, using the `[Link text](/pages/your-page.html)` command on the page you want.
+1. Add a link to that page where you want it, using the `[Link text]({{site.baseurl}}/pages/your-page.html)` command on the page you want.
 
